little-issue-solve

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             <img src="img/scene3a.png" />
             <img src="img/scene4.png" class="storytelling-scene-four" />
           </div>
-          <div class="storytelling-transition"></div>
+          <!-- <div class="storytelling-transition"></div> -->
           <div class="storytelling-scene-five">
             <img src="img/scene5.png" />
             <div id="bulle-right-4" class="bulle-4">
@@ -128,10 +128,10 @@
           Book <br>   Audiobook
           </p>
          
-      </div>
+      </div> 
         <div class="footer-info">
           <p class="footer-texte">
-            Fuite Contact
+            Fuite Contact 
           </p>
           <p class="footer-sous-texte">Préférence.Système@gmail.com <br> 075 852 56 55 <br> Rte Wilhelm-Kaiser 13, 1700 Fribourg
           </p> 
