--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
           </div>
           <div id="bulle-left-3" class="bulle-3">
             <img src="img/bulle-3.png" alt="bulle" />
-          </div>
+          </div> 
         </div>
           <!-- <div class="storytelling-transition">
 
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-      <div class="background-presentation">
+      <div class="background-presentation"> </div>
         <img src="img/personnages.png" alt="personnages" />
 
         <div class="card">
@@ -90,7 +90,7 @@
           <div class="card-two"><img src="img/card.png" alt="card" /></div>
           <div class="card-three"><img src="img/card.png" alt="card" /></div>
         </div>
-      </div>
+     
       <div class="bd">
 
         <img src="img/bd1.png" class="bd-img" />
@@ -119,7 +119,7 @@
           Système
         </p>
         <div class="footer-info-all">
-        <div class="footer-info">
+        <div class="footer-info info-product">
           <p class="footer-texte">
             Fuite Produits
 
@@ -129,14 +129,14 @@
           </p>
          
       </div> 
-        <div class="footer-info">
+        <div class="footer-info info-contact">
           <p class="footer-texte">
             Fuite Contact 
           </p>
           <p class="footer-sous-texte">Préférence.Système@gmail.com <br> 075 852 56 55 <br> Rte Wilhelm-Kaiser 13, 1700 Fribourg
           </p> 
       </div>
-      <div class="footer-info">
+      <div class="footer-info info-media">
         <p class="footer-texte">
           Réseaux sociaux   </p>
           <img src="img/footer-media-icon.png"  class="footer-icon" />
